--- a/src/components/nota/Nota.css
+++ b/src/components/nota/Nota.css
@@ -1,3 +1,11 @@
+.div_nota{
+  height: calc(100vh - 64px);
+}
+
+.div_nota form {
+  height: 100%;
+}
+
 input.title_nota{
   width: 100%;
   border: 0;
@@ -10,4 +18,5 @@ textarea{
   width: 100%;
   border: 0;
   outline: none;
+  height: calc(100vh - 100px);
 }
