--- a/src/components/nota/Nota.css
+++ b/src/components/nota/Nota.css
@@ -1,5 +1,6 @@
 .div_nota{
   height: calc(100vh - 64px);
+  position: relative;
 }
 
 .div_nota form {
@@ -9,8 +10,12 @@
 input.title_nota{
   width: 100%;
   border: 0;
-  border-bottom: 1px solid;
+  border-bottom: 1px solid #d2d2d2;
   outline: none;
+  padding: 2px 4px;
+  font-size: 1em;
+  font-weight: 600;
+  color: #5d5d5d;
 }
 
 textarea{
@@ -19,4 +24,7 @@ textarea{
   border: 0;
   outline: none;
   height: calc(100vh - 100px);
+  padding: 2px 4px;
+  color: #4a4a4a;
+  font-family: sans-serif;
 }
